# mdf-cutting

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README .md  README.md  cleanup.py  config.py  constants.py  coverage.xml  dxf_generator.py  env.example  flake8_errors.txt  flake8_report.txt  gui.py  main.py  materials.csv  packing.py  patterns.py  processed_data.csv  pyproject.toml  remnants.py  requirements-dev.txt  requirements.txt  temp-requirements.txt  test_file_organizer.py  test_model.pth  utils.py
.github/workflows/: ci.yml
cursor/rules/: system_prompt.md
data/feedback/: feedback_20250806_155239.json
data/training/: feedback_training_data.jsonl
docs/: ai_ui_integration_report.md  configuration.md  integration_report.md  ui_integration_proposals.md  ui_template_analysis.md  web_ui_integration_report.md  web_ui_migration_plan.md  web_ui_migration_report.md
output/: output.rar  output1.rar
packer/: __init__.py  cleanup.py  config.py  constants.py  dxf_generator.py  dxf_writer.py  file_organizer.py  gui.py  materials.csv  packing.py  patterns.py  processed_data.csv  remnants.py  utils.py
packer/ai_module/: __init__.py
src/mdf_cutting/: __init__.py  main.py
src/mdf_cutting/ai_module/: __init__.py  data_collector.py  dxf_parser.py  ml_model.py  validator.py
src/mdf_cutting/config/: __init__.py  base_config.yaml  loader.py  optimization_rules.yaml  production_tables.yaml
src/mdf_cutting/core/: __init__.py  dxf_generator.py  optimizer.py  packing.py  patterns.py  remnants.py
src/mdf_cutting/data/: __init__.py  converters.py  managers.py  validators.py
src/mdf_cutting/data_collectors/: __init__.py  (+5 more)
test/: main.py  test_packing.py
test/unit/: test_dxf_writer.py  test_utils.py
tests/: __init__.py  main.py  test_ai_ui_integration.py  test_core.py  test_packing.py
tests/test_ai_module/: __init__.py  test_features.py  test_leftovers.py  test_models.py
tests/test_config/: __init__.py  test_config_validation.py  test_loader.py
tests/test_data_collectors/: __init__.py  test_correction_logger.py  test_data_serializer.py  test_dxf_parser.py  test_table_extractor.py
tests/test_integration/: test_ai_integration.py
ui_shablon/js/: analytics-service.min.js  app-config.min.js  app-controller.min.js  app.min.js  auth-controller.min.js  auth-service.min.js  billing-details-controller.min.js  billing-details-service.min.js  client-info.min.js  clo-utils.min.js  configuration-properties.min.js  csv-handler.min.js  cut-list-service.min.js  cutlist-configuration.min.js  diagram-service.min.js  dimension-processor.min.js  download.min.js  image-generator.min.js  invoice-controller.min.js  material-service.min.js  mouse-tracker.min.js  paypal-service.min.js  pdf-controller.min.js  pdf-generator.min.js  permit-period-service.min.js  stats-controller.min.js  stripe-plans.min.js  subscription-controller.min.js  subscription-service.min.js  tiling-data.min.js  toast-service.min.js  upload.min.js  utils.min.js
ui_shablon/panel_list/: panel-list-controller.min.js  panel-list-service.min.js  project-controller.min.js  project-service.min.js
web-ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
web-ui/api/: cutting_engine.py  main.py  requirements.txt
web-ui/src/: App.jsx  main.jsx
(+57 files in other folders)
